# perfin-gui

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
src/: DWRibbon.cpp  DWRibbon.h  DWRibbon.ui  Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  WAccounts.cpp  WAccounts.h  WAccounts.ui  WRibbon.cpp  WRibbon.h  main.cpp
src/core/: CMakeLists.txt
src/ui/: CMakeLists.txt  DWRibbon.cpp  DWRibbon.h  Database.cpp  MainWindow.cpp  WAccounts.cpp  WAccounts.h  WAccounts.ui  WBase.cpp  WBase.h
